fixed spacing issue on About Me section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,12 +75,6 @@ h2 {
   margin-bottom: 0pt;
 }
 
-.aboutme {
-}
-
-.aboutme-title {
-}
-
 .aboutme-flex {
   display: flex;
   flex-wrap: wrap;
@@ -91,6 +85,7 @@ h2 {
   width: 40vw;
   padding: 1rem;
   flex-grow: 2;
+  margin-top: -1rem;
 }
 
 .aboutme-image {
@@ -114,9 +109,6 @@ h2 {
 .aboutme-contact img {
   width: 100px;
   padding: 1rem;
-}
-
-.projects {
 }
 
 .project-container {
